<resources>
    <string name="app_name">Habits21</string>
    <string name="addString">Add</string>
    <string name="headline">Habit tracker</string>
    <string name="addHabit">Name:</string>
    <string name="strBack"> &lt;&lt;&lt; </string>
    <string name="strAddWeek">Add a week</string>
    <string name="actionInfo">About</string>
    <string name="actionExit">Exit</string>
    <string name="info_statement">Simple habit tracking app based on the idea that it takes 21 days to form a new habit</string>
    <string name="about">About</string>
    <string name="progress">Progress</string>
    <string name="ok">ОК</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Remove</string>
    <string name="choose">Choose action</string>
    <string name="habit">Habit </string>
    <string name="remove"> has been removed.</string>
    <string name="stats">Statistics</string>
    <string name="days">days</string>
    <string name="week">Week</string>
    <string name="rate">Rate this app</string>
    <string name="app_id">ca-app-pub-4575219139025372~7010651430</string>
    <string name="banner_id">ca-app-pub-4575219139025372/7174302963</string>
    <string name="yourate">Rating :</string>
</resources>